test/scc_test/exp/semantic-errors/004.a
004.t:4:5: error: expression must have pointer-to-object type